@@ -533,7 +533,7 @@ pm-proximity-beacon=Proximity beacon
 pm-electric-boiler-1=Electric boiler 1
 pm-electric-boiler-2=Electric boiler 2
 pm-cooling-plant=Cooling plant
-pm-izzy-spiderling="I.Z.Z.Y" Spiderling
+pm-spiderling-issy=Spiderling 'I.S.S.Y'
 
 [entity-description]
 pm-welder=A smelting machine thats sole purpose is to produce alloys. They can only run on unique fuel.
@@ -1456,7 +1456,8 @@ pm-advanced-iron-processing=Advanced iron processing
 pm-advanced-copper-processing=Advanced copper processing
 pm-advanced-nickel-processing=Advanced nickel processing
 pm-advanced-zinc-processing=Advanced zinc processing
-pm-octane-fuel-canisters=Octane fuel canisters
+pm-octane-fuel-canisters=Octane fuel 
+pm-spiderling-ISSY=Spiderling I.S.S.Y
 
 pm-ferric-chloride-processing=Ferric chloride processing
 pm-advanced-chlorine-processing=Advanced chlorine processing
