@@ -205,7 +205,7 @@ function make_spidertron_leg(spidertron_name, scale, leg_thickness, movement_spe
       graphics_set = create_spidertron_leg_graphics_set(scale * leg_thickness, number)
     }
 end
-create_spiderling{name = "pm-izzy-spiderling",
+create_spiderling{name = "pm-spiderling-izzy",
                   scale = 0.85,
                   leg_scale = 0.95, -- relative to scale
                   leg_thickness = 0.85, -- relative to leg_scale
