@@ -1462,7 +1462,7 @@ data:extend({
   },
   {
     type = "item-with-entity-data",
-    name = "pm-izzy-spiderling",
+    name = "pm-spiderling-issy",
     icon = "__base__/graphics/icons/spidertron.png",
     icon_tintable = "__base__/graphics/icons/spidertron-tintable.png",
     icon_tintable_mask = "__base__/graphics/icons/spidertron-tintable-mask.png",
@@ -1471,8 +1471,7 @@ data:extend({
     inventory_move_sound = item_sounds.spidertron_inventory_move,
     pick_sound = item_sounds.spidertron_inventory_pickup,
     drop_sound = item_sounds.spidertron_inventory_move,
-    place_result = "pm-izzy-spiderling",
-    weight = 1 * tons,
+    place_result = "pm-spiderling-issy",
     stack_size = 2
   },
 
