@@ -43,6 +43,7 @@ Date: 2024-12-08
     - Also changed it so that certain buildings (air filters) now require to be in polluted chunks.
     - Overhauled the production of the 4 starter metals (iron, copper, nickel, zinc). They now take two steps to produce instead of one, and cannot be made from TM ores anymore.
     - Added a building dedicated to making coolant, so that it can be prioritised in power, and not cause your base to explode. Once again, merciful god.
+    - Added I.S.S.Y - a spiderling that can be used for movement. It has low offensive capabilites, health and a slightly smaller equipment grid but is very fast and nimble.
 
   Changes:
     - Changed CRT's recipe to take CRT framing and screens.
